feat : Upgrade security.yaml : Providers

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,6 +6,11 @@ security:
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
+        #Ceci permet de dire à symfony que l'authentification d'un user se fait à l'aide de la class du même nom via son Email
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: Email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -23,8 +28,9 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/admin, roles: ROLE_RH }
+         - { path: ^/admin, roles: ROLE_MANAGER }
+         - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
     security:
