--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,8 +5,8 @@ security:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
-        #Ceci permet de dire à symfony que l'authentification d'un user se fait à l'aide de la class du même nom via son Email
+        # users_in_memory: { memory: null }
+        # Ceci permet de dire à symfony que l'authentification d'un user se fait à l'aide de la class du même nom via son Email
         app_user_provider:
             entity:
                 class: App\Entity\User
@@ -17,7 +17,7 @@ security:
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
@@ -31,6 +31,10 @@ security:
          - { path: ^/admin, roles: ROLE_RH }
          - { path: ^/admin, roles: ROLE_MANAGER }
          - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy :
+        ROLE_RH: ROLE_MANAGER
+        ROLE_MANAGER: ROLE_USER
 
 when@test:
     security:
