--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,13 +29,13 @@ security:
             # https://symfony.com/doc/current/security.html#the-firewall
 
             # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
+            switch_user: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/planning, roles: ROLE_USER }
-         - { path: ^/admin, roles: ROLE_MANAGER }
+        # - { path: ^/planning, roles: ROLE_USER }
+        # - { path: ^/admin, roles: ROLE_MANAGER }
         # - { path: ^/profile, roles: ROLE_USER }
 
     role_hierarchy :
