--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "core-js": "^3.0.0",
         "glob-all": "^3.2.1",
         "path": "^0.12.7",
+        "postcss-import": "^14.0.2",
         "postcss-loader": "^6.2.1",
         "purgecss-webpack-plugin": "^4.1.3",
         "regenerator-runtime": "^0.13.2",
@@ -20,8 +21,5 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
-    },
-    "dependencies": {
-        "postcss-import": "^14.0.2"
     }
 }
